--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="./uikit/styles/uikit.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/uikit/styles/uikit.css" />
     <!-- -->
      
     <title>React App</title>
